--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -216,7 +216,7 @@ h1 a:hover,
 
 /* Code */
 code {
-	font: 134%/1.3 monospace;
+	font: 110%/1.5 Monaco, Consolas, 'Andale Mono', monospace;
 }
 pre {
 	position: relative;
