--- a/symphony/assets/devkit.css
+++ b/symphony/assets/devkit.css
@@ -17,6 +17,7 @@
 	body {
 		background: hsl(210, 5%, 10%);
 		font: 80% sans-serif;
+		overflow: hidden;
 	}
 	
 	a {
@@ -38,7 +39,7 @@
 		bottom: 0;
 		color: #ffffff;
 		padding: 20px;
-		position: fixed;
+		position: absolute;
 		text-shadow: 2px 2px 3px hsl(210, 5%, 5%);
 		right: 0;
 		top: 0;
@@ -91,7 +92,12 @@
 	
 	#content {
 		background: hsl(210, 5%, 10%);
-		padding: 0 270px 0 0;
+		bottom: 0;
+		left: 0;
+		position: absolute;
+		overflow: auto;
+		right: 270px;
+		top: 0;
 	}
 	
 /*-------------------------------------------------------------------------------*/
