slight change to button size

--- a/symphony/assets/forms.css
+++ b/symphony/assets/forms.css
@@ -195,9 +195,9 @@ div.actions button {
 	color: #fff;
 	cursor: pointer;
 	padding: 0 1em .2em 1em;
-	line-height:2em;
-	height:2em;
-	text-transform: uppercase;
+	line-height: 2em;
+	font-size: 0.95em;
+	height: 2em;
 	letter-spacing: .1em;
 	border-radius: 1em;
 	-moz-border-radius: 1em;
