--- a/symphony/assets/forms.css
+++ b/symphony/assets/forms.css
@@ -403,6 +403,10 @@ ul.tags .more:hover {
 #components li {
 	margin-bottom: 0.75em;
 }
+#components .button {
+	font-size: 0.9em;
+	font-weight: normal;
+}
 .file input {
 	margin: -3px 0;
 	font: inherit;
