--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -89,6 +89,11 @@ h1 a:hover,
 	color: #444;
 	text-decoration: none;
 }
+*:first-child+html #nav a {
+	background-color:#fff;
+	color: #444;
+}
+*:first-child+html #nav a:hover,
 #nav a:hover {
 	background-color: #7e7e70;
 	color: #fff;
