--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -4,14 +4,13 @@ form {
 	position: relative;
 	padding: 0 19px;
 	overflow: hidden;
+	font-size: 1.1em;
 }
 h1 {
 	margin: 0 -19px;
 	padding: 1em 19px;
 	background: #353530;
 	color: #fff;
-	text-shadow: -1px 2px 3px #111;
-	font-weight: bold;
 	line-height: 1em;
 }
 h1 a {
@@ -27,7 +26,6 @@ h1 a:hover,
 #nav {
 	z-index: 3;
 	position: relative;
-	top: -5px;
 	float: left;
 	margin: 0 0 7px -19px;
 	padding: 5px 38px 5px 0;
@@ -37,7 +35,7 @@ h1 a:hover,
 	white-space: nowrap;
 	list-style: none;
 	text-transform: uppercase;
-	font: bold 90.91%/0 Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
+	font-size: .9em;
 }
 #nav > li {
 	float: left;
