--- a/symphony/assets/tables.css
+++ b/symphony/assets/tables.css
@@ -21,7 +21,7 @@ td {
 }
 th:first-child,
 td:first-child {
-	padding-left: 19px;
+	padding-left: 1.3em;
 }
 tr.odd td {
 	background-color: #f5f5f4;
@@ -129,7 +129,4 @@ form,
 #nav {
 	padding-right: 0;
 	padding-left: 0;
-}
-h2 {
-	margin: 0 19px;
 }
