--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -54,7 +54,7 @@ h1 a:hover,
 }
 
 #nav li a:hover {
-	background-color: #2a2a2a;
+	color:#81b934;
 }
 
 #nav ul {
@@ -105,7 +105,7 @@ h1 a:hover,
 }
 
 /* Expanded Navigation */
-#nav.expanded li {width:11em;font-weight:bold;}
+#nav.expanded li {width:11em;font-weight:bold;cursor:default;}
 #nav.expanded #nav-expand {width: auto;}
 #nav.expanded li ul li {font-weight:normal;}
 
@@ -144,18 +144,16 @@ h1 a:hover,
 	z-index: 2;
 	margin: 0;
 	padding: 0 0.83em 0;
-	background-color: #e4e4e0;
+	background-color: #e4e4e4;
 	color: #555;
 	font-size: 90.91%;
-	line-height: 2.5;
+	line-height: 2.75em;
 }
 #notice.error {
 	background-color: #ffb;
-	border-top: 3px solid #cc8;	
 }
 #notice.success {
 	background-color: #ddf6bb;
-	border-top: 3px solid #90c349;
 }
 #notice a,
 #notice button {
@@ -280,7 +278,7 @@ a.create {
 }
 #session .button {
 	font-size: 1em;
-	background-color:#161616;
+	background-color:#121212
 	}
 	#session .button:hover {background-color:#000;color:#fff;}
 	
