--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -41,6 +41,7 @@ ul,
 ol {
 	margin: 0 0 1.5em 2.25em;
 }
+dt {font-weight:bold;}
 code {
 	font: 110%/1.5 Monaco, Consolas, 'Andale Mono', monospace;
 	font-size-adjust: 0.5;
